cmake_minimum_required(VERSION 3.10)
project(cpp-algo-shunting-yard-with-ast)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_library(hkparser STATIC include/parser_api.h src/parser_api.cpp src/node.h)
target_include_directories(hkparser PUBLIC include)
target_include_directories(hkparser PRIVATE src)
add_executable(main src/main.cpp)
target_link_libraries(main hkparser)